Showing nodes in artifacts gui

--- a/pm/Tickets/AMT-KB-0001.yaml
+++ b/pm/Tickets/AMT-KB-0001.yaml
@@ -1,4 +1,4 @@
-uid: AMT-KB-0001
+id: AMT-KB-0001
 Description: Create user interface to edit and view tickets.
 Originator: Kenneth E. Bellock
 Assignee: Kenneth E. Bellock
