Renaming library and tool amt

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ python =
 [testenv:flake8]
 basepython = python
 deps = flake8
-commands = flake8 amtool
+commands = flake8 amt
 
 [testenv]
 setenv =
