Documentation updates for readthedocs

--- a/tox.ini
+++ b/tox.ini
@@ -11,8 +11,14 @@ deps = flake8
 commands = flake8 amt
 
 [testenv]
+passenv = TOXENV CI TRAVIS TRAVIS_* CODECOV_*
 setenv =
     PYTHONPATH = {toxinidir}
+deps = -rrequirements_dev.txt
 
-commands = python setup.py test
-
+commands = 
+    coverage erase
+    coverage run setup.py test
+    coverage report --omit='.tox/*'
+    coverage html --omit='.tox/*'
+    codecov
