--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -5,9 +5,11 @@ watchdog==0.9.0
 flake8==3.5.0
 tox==3.5.2
 coverage==4.5.1
+codecov==2.0.15
 Sphinx==1.8.1
 twine==1.12.1
 PyYAML==5.1
 click==7.0
 click_log==0.3.2
 click_plugins==1.1.1
+m2r==0.2.1
