Including uid function and framework for render command

--- a/pm/Requirements/AMT-REQ-0001.yaml
+++ b/pm/Requirements/AMT-REQ-0001.yaml
@@ -1,3 +1,3 @@
-uid: AMT-REQ-0001
+UID: ae5f86afd83645b4887572851eb49587
 Name: AMT-REQ-0001
 Requirement: AMT object trees shall consist of directories and yaml files.
