--- a/pm/Tickets/AMT-KB-0001.yaml
+++ b/pm/Tickets/AMT-KB-0001.yaml
@@ -1,3 +1,4 @@
+UID: 9a6f7672bd0c42d38a866398d507d4d8
 id: AMT-KB-0001
 Name: Create user interface to edit and view tickets
 Description: A user interface is needed to edit, sort, and view tickets.
