--- a/pm/Requirements/AMT-REQ-0002.yaml
+++ b/pm/Requirements/AMT-REQ-0002.yaml
@@ -1,3 +1,3 @@
-uid: AMT-REQ-0002
+UID: 2f39e63bdbb24286b9fc91dfbd4c62d1
 Name: AMT-REQ-0002
 Requirement: Every AMT object shall have an unique id.
