--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -7,6 +7,8 @@ tox==3.5.2
 coverage==4.5.1
 codecov==2.0.15
 Sphinx==1.8.1
+sphinx_gallery==0.4.0
+sphinx_issues==1.2.0
 twine==1.12.1
 PyYAML==5.1
 click==7.0
